All functinality completed for v1

--- a/flask_app/templates/createMessage.html
+++ b/flask_app/templates/createMessage.html
@@ -16,8 +16,9 @@
         </div>
         <div>
             <label for="creator">From</label>
-            <input type="text" name="creator">
-            <input type="checkbox" id="Anonymous" name="creator" value="Anonymous">Anonymous</input>
+            <!-- <small class="form-text text-muted"></small> -->
+            <input type="text" name="creator1">
+            <input type="checkbox" id="Anonymous" name="creator2" value="Anonymous">Anonymous</input>
         </div>
         <input type="submit" value="Create">
     </form>
