--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,4 +1,29 @@
-<h1>Message in a Bottle</h1>
-<form action="/message">
-    <button>Grab a Message</button>
-</form>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Message For You</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+</head>
+<body>
+    <section>
+        <div class="center">
+            <h1>Message For You</h1>
+            <form action="/message">
+                <button class="btn btn-outline-info">Grab a Message</button>
+            </form>
+        </div>
+        <div class="wave water"></div>
+        <div class="wave water"></div>
+        <div class="wave water"></div>
+        <div class="wave water"></div>
+    </section>
+</body>
+</html>
