--- a/flask_app/templates/message.html
+++ b/flask_app/templates/message.html
@@ -1,10 +1,35 @@
-<h1>Your Message</h1>
-<p>This is a whole lot of nothing!</p>
-<p>- A Wise Man</p>
 
-<a href="/">Grab a new Message</a>
-
-{% for message in messages %}
-    <p>{{message['message']}}</p>
-    <p>{{message['creator']}}</p>
-{% endfor %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Message For You</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/message.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
+</head>
+<body>
+    {% for message in messages %}
+    <section>
+        <div class="center">
+            <div class="note">
+                <h3>{{message.message}}</h3>
+                <h6>-{{message.creator}}</h6>
+            </div>
+            <div class="buttons">
+                <a href="/" class="btn btn-outline-info btn-sm">Grab a New Message</a>
+                <a href="/messages/new"class="btn btn-outline-info btn-sm">Write a Message</a>
+            </div>
+        </div>
+        <div class="wave water"></div>
+        <div class="wave water"></div>
+        <div class="wave water"></div>
+        <div class="wave water"></div>
+    </section>
+    {% endfor %}
+</body>
+</html>
