--- a/flask_app/templates/message.html
+++ b/flask_app/templates/message.html
@@ -21,7 +21,7 @@
                 <h6>-{{message.creator}}</h6>
             </div>
             <div class="buttons">
-                <a href="/" class="btn btn-outline-info btn-sm">Grab a New Message</a>
+                <a href="/message" class="btn btn-outline-info btn-sm">Grab a New Message</a>
                 <a href="/messages/new"class="btn btn-outline-info btn-sm">Write a Message</a>
             </div>
         </div>
